# landuseanalyst

./: .continuerc.json  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CREDITS.md  Chapter4MethodologyOverview.md  Doxyfile  MethodologyOverviewCh4ThesisJJ.tex  README.md  README.txt  defsAnimals.jsonc  defsCrops.jsonc  install_sample_data.sh  pb_tool.cfg  pyproject.toml  pytest.ini  requirements.txt  settings.pro  shuna_results.qgs
cppArchive/: CMakeLists.txt  README.md  landuseanalyst.pro
cppArchive/buildXCODE/CMakeScripts/: XCODE_DEPEND_HELPER.make  install_postBuildPhase.makeDebug
cppArchive/buildXCODE/landuseanalyst.xcodeproj/: arkygeek.pbxuser
cppArchive/docs/: annotated.html  build_2CMakeFiles_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build_2src_2gui_2moc__lagrassprocess_8cxx__incl.map  build_2src_2gui_2moc__lamainform_8cxx-source.html  build_2src_2gui_2qrc__resources_8cxx.html  build_2src_2gui_2qrc__resources_8cxx_2496175087e96148e1a80f94ec480c51_cgraph.map  build_2src_2gui_2qrc__resources_8cxx_bd8d83733ca9800d36d9bb41f512929e_icgraph.map  build_2src_2gui_2ui__laanimalmanagerbase_8h-source.html  build_2src_2gui_2ui__laanimalmanagerbase_8h.html  build_2src_2gui_2ui__laanimalparametermanagerbase_8h-source.html  build_2src_2lib_2moc__lamodel_8cxx.html  build_2src_2tests_2moc__lamodeltest_8cxx-source.html  classLaAnimalManager-members.html  classLaAnimalManager_142bab8a1ce1cf043a11b6b9a2334dbd_cgraph.map  classLaAnimalManager_142bab8a1ce1cf043a11b6b9a2334dbd_icgraph.map  classLaAnimalManager_483e355d2b67b327a1fc44192a02ee1e_cgraph.map  classLaAnimalManager__coll__graph.md5  classLaAnimalManager_d77670b68efa77e6ca529ffe427b7507_cgraph.map  classLaAnimalParameter.html  classLaAnimalParameterManager_23b4783b792997c1a318097f7b6fdd3c_cgraph.map  classLaAnimalParameterManager_48cbbaf51acb03757734adc90c8cc8b8_icgraph.md5  classLaAnimalParameterManager_a31e2447ccce3b6f5a2d400b6cc6efca_cgraph.md5  classLaAnimalParameterManager_d0049a7934a18d67ff17f3093365522f_cgraph.md5  classLaAnimalParameterManager_eaf535b176974e708db3a905a47db62d_cgraph.md5  classLaAnimalParameterManager_f5c9801d464bc4e550d3c26b77e9e503_cgraph.map  classLaAnimalParameter_0ecd8de885a804229ae6b9c1b3307b4f_icgraph.md5  classLaAnimalParameter_1b5e496bcf70721325d7807c9e25c908_icgraph.map  classLaAnimalParameter_38e32ddacce563fe0b46047dc6922e19_icgraph.map  classLaAnimalParameter_5044c66b15a5b118ff677fbaf6a5e45c_icgraph.map  classLaAnimalParameter_5044c66b15a5b118ff677fbaf6a5e45c_icgraph.md5  classLaAnimalParameter_95c9fd177dddeae2dc847a675249bb67_cgraph.map  classLaAnimalParameter_d3e81c9eba26a0974d7f4fc281ae7112_icgraph.map  classLaAnimalParameter_d3e81c9eba26a0974d7f4fc281ae7112_icgraph.md5  classLaAnimalParameter_e5b66dbd8cc3acb917fc0d6a2ed271a3_cgraph.map  classLaAnimalParameter_e5b66dbd8cc3acb917fc0d6a2ed271a3_cgraph.md5  classLaAnimalParameter_f93afb503c0851655e7caf842df6176c_icgraph.md5  classLaAnimal_139a9cb0f3ead8b63e5de09ea887eb09_icgraph.md5  classLaAnimal_1b7b995f3263dfb8654956b21d4e0131_icgraph.md5  classLaAnimal_4bec657d92a984de184898598f2cffb2_icgraph.map  classLaAnimal_4e0d4181ab722a6f28b5ab5022f8b9de_icgraph.md5  (+451 more)
cppArchive/src/: CMakeLists.txt
cppArchive/src/gui/: CMakeLists.txt  laanimalmanager.h  laanimalparametermanager.cpp  laassemblageconversion.cpp  laassemblageconversion.h  lacropmanager.cpp  lacropmanager.h  lacropparametermanager.cpp  lacropparametermanager.h  lamainform.cpp  lamainform.h  lamodelreports.h  landuseanalyst.rc  main.cpp
cppArchive/src/lib/: CMakeLists.txt  la.h  laanimal.cpp  laanimal.h  lacrop.cpp  lagrass.cpp  lagrassprocesslib.h  lamodel.cpp  lamodel.h  lautils.cpp  lautils.h  version.h
cppArchive/src/resources/: DEM.html  lalogo_master.xcf  resources_rc.py
cppArchive/src/tests/: CMakeLists.txt
cppArchive/src/ui/: laanimalparametermanagerbase.ui  lacropmanagerbase.ui  lacropparametermanagerbase.ui
cppArchive/test_data/animalParameterProfiles/: 75ce8f7e-2556-418e-a7ed-1bf23a341487.xml  81589aae-c461-4e51-8584-9a1a60af359e.xml
cppArchive/test_data/animalProfiles/: 4ee39cc4-8f9a-45fa-825c-8e1d96fc3984.xml  7b71ee13-a992-4226-b5cf-5f69f071a265.xml
cppArchive/test_data/cropParameterProfiles/: 1b1155c2-e222-4b84-b0fb-f20f99d8f5f8.xml  7375d3fc-41f0-402c-ab61-8650e096a21e.xml  8c97586f-dc24-42fe-9989-2b81b3b4777d.xml  b0fde8d0-d362-41d5-9c35-0a5f80f8f56f.xml
cppArchive/test_data/cropProfiles/: d413884f-45d8-457b-9c2f-e479f291bbeb.xml
cppArchive/test_data/modelOutputs/: 06ecdeb0-8d64-4496-ba2a-d8cef18aa3d2.xml  07091cc4-3b7a-4099-afcc-87b47402e058.xml  08a0babb-243c-4e92-b7d8-2ef88bf5433e.xml  0d9c3025-213b-4cd5-a55b-488391461c5a.xml  0e931f17-d04a-4825-bdff-0481f5379928.xml  14dc15c9-a2c6-4aa6-aa70-02b471950992.xml  15426061-5c92-45d8-baea-961349ae2ee0.xml  (+96 more)
src/gui/: CMakeLists.txt  gui.pro  laanimal.cpp  laanimal.h  laanimaldetails.cpp  laanimaldetails.h  laanimalformdetails.cpp  laanimalformdetails.h  laanimalformmain.cpp  laanimalformmain.h  laanimalmain.cpp  laanimalmain.h  laanimalmanager.cpp  laanimalmanager.h  laanimalparameter.cpp  laanimalparameter.h  laanimalparametermanager.cpp  laanimalparametermanager.h  laanimalparameters.cpp  laanimalparameters.h  laassemblageconversion.cpp  laassemblageconversion.h  lacropmanager.cpp  lacropmanager.h  lacropparametermanager.cpp  lacropparametermanager.h  lagrassprocess.cpp  lagrassprocess.h  laguid.cpp  laguid.h  lamainform.cpp  lamainform.h  lamodelreports.cpp  lamodelreports.h  lamore.cpp  lamore.h  laplant.cpp  laplant.h  laplantdetails.cpp  laplantdetails.h  (+20 more)
src/lib/: CMakeLists.txt  la.h  laanimal.cpp  laanimal.h  laanimalparameter.cpp  laanimalparameter.h  lacrop.cpp  lacrop.h  lacropparameter.cpp  lacropparameter.h  ladietlabels.cpp  ladietlabels.h  lafoodsource.cpp  lafoodsource.h  lagrass.cpp  lagrass.h  lagrassprocesslib.cpp  lagrassprocesslib.h  laguid.h  lamodel.cpp  lamodel.h  lamodel_interface.h  lamodelreports.cpp  laplant.cpp  laplant.h  laplantparameter.h  laserialisable.cpp  laserialisable.h  lautils.cpp  lautils.h
src/tests/: CMakeLists.txt  lagrasstest.cpp  lamodeltest.cpp
(+5330 files in other folders)
